# xzar

./: .gitignore  Makefile  README.md  pyproject.toml
test/: utils.py
test/cmd/: embed_test.py  ner_test.py
xzar/: __main__.py  argparse.py  console.py  exceptions.py  loading_bar.py  spacy_models.py  transformers_models.py  utils.py
xzar/cmd/: __init__.py  embed.py  ner.py  tokenize.py
